# arca_vulkan

./: .gitignore  CMakeLists.txt  main.cpp  shaders_list.txt
arca/: arca.cmake
arca/application/header/: arcaApplication.h
arca/application/source/: arcaApplication.cpp
arca/core/: compile_shaders.cmake
arca/core/header/: core.h
arca/core/shaders/: shader.frag
arca/core/source/: core.cpp
arca/window/: window.cmake  windowBaseSettings.h.in
arca/window/header/: iwindow.h
arca/window/source/: iwindow.cpp  window.h
arca_engine/: CMakeLists.txt
arca_engine/application/: CMakeLists.txt
arca_engine/core/: CMakeLists.txt  compile_shaders.cmake
arca_engine/core/header/: core.h
arca_engine/core/shaders/: shader.vert
arca_engine/core/source/: core.cpp
arca_engine/window/: CMakeLists.txt
arca_engine/window/source/: iwindow.cpp  window.cpp
core/: compile_shaders.cmake  core.cmake  coreBaseSettings.h.in
core/source/: core.cpp  core.h
core/source/window/: iwindow.cpp  iwindow.h  window.cpp  window.h
window/source/: fakeWindow.h
